--- a/style.css
+++ b/style.css
@@ -103,4 +103,35 @@
     margin: 15px 23px;
     display: block;
     padding: 8px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.notifications{
+    display: flex;
+    width: 400px;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background: yellowgreen;
+    align-items: center;
+}
+.contents{
+    flex-basis: 50%;
+    padding: 10px;
+    font-weight: bold;
+font-size: 20px;
+}
+.notification-img{
+    flex-basis: 50%;
+}
+.notification-img img{
+    width: 100%;
+}
+.contents a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    margin: 0 10px;
+    font-weight: bold;
 }
