--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
     bottom: 0;
     position: absolute;
 }
-.social-icons .fa{
+.social-icons img{
     margin: 15px 23px;
     display: block;
     padding: 8px;
