--- a/stylee.css
+++ b/stylee.css
@@ -2,7 +2,19 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    
 }
+.heading{
+    position: absolute;
+    top: 10%;
+    left: 39%;
+    color: rgb(0, 0, 0);
+}
+.heading h1{
+    font-size: 70px;
+    margin-bottom: 30px;
+}
+
 .btn{
     height: 40px;
     width: 50px;
@@ -11,16 +23,28 @@
     font-size: 25px;
 }
 .textview{
-
+    border: 1px solid #edeaea;
     width: 220px;
     height: 40px;
     margin: 2px;
+    font-size: 25px;
+    text-align: right;
 }
 .box{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    background-color: red;
+    background-color: skyblue;
     padding: 10px;
 }
+.brandicons {
+    position: absolute;
+    top: 23%;
+    left: 73%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 15px;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1; /* Firefox */
